--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -44,13 +44,13 @@
           <children>
             <Label layoutX="8.0" layoutY="5.0" styleClass="label-lists" stylesheets="@/css/style.css" text="Categorías / Items" />
             <TextField fx:id="tfdItems" layoutX="7.0" layoutY="23.0" prefHeight="25.0" prefWidth="108.0" styleClass="text-field-main" stylesheets="@/css/style.css" text="Filtro..." />
-                  <TreeView fx:id="tvwGradeReport" layoutX="-1.0" layoutY="52.0" prefHeight="266.0" prefWidth="257.0" styleClass="list-view-main" stylesheets="@/css/style.css" />
                   <MenuButton fx:id="slcType" layoutX="157.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Tipo" />
                   <Label alignment="CENTER_RIGHT" layoutX="120.0" layoutY="30.0" prefHeight="16.0" prefWidth="33.0" text="Tipo:">
                      <font>
                         <Font size="11.0" />
                      </font>
                   </Label>
+                  <ListView layoutX="2.0" layoutY="61.0" prefHeight="260.0" prefWidth="256.0" />
           </children>
         </Pane>
             <ListView fx:id="listParticipants" layoutY="55.0" prefHeight="231.0" prefWidth="257.0" styleClass="list-view-main" stylesheets="@/css/style.css" />
@@ -128,7 +128,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <ListView fx:id="listLogs" layoutX="4.0" layoutY="-2.0" prefHeight="465.0" prefWidth="636.0" />
+                        <ListView fx:id="listLogs" layoutX="-10.0" layoutY="-9.0" prefHeight="477.0" prefWidth="650.0" />
                      </children>
                   </AnchorPane>
                </content>
