Añadido en la interfaz para tablas del log [#37]

--- a/resources/view/MainNew.fxml
+++ b/resources/view/MainNew.fxml
@@ -212,6 +212,15 @@
                         </AnchorPane>
                      </content>
                   </Tab>
+                  <Tab text="Tabla logs">
+                     <content>
+                        <AnchorPane>
+                           <children>
+                              <WebView fx:id="tableLogs" prefHeight="484.0" prefWidth="614.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
                   <Tab text="Logs">
                      <content>
                         <AnchorPane>
