--- a/resources/view/Login.fxml
+++ b/resources/view/Login.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
@@ -12,25 +18,25 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1024.0" maxWidth="728.0" minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" styleClass="anchorpane" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<AnchorPane maxHeight="1024.0" maxWidth="728.0" minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" styleClass="anchorpane" stylesheets="@/css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
 	<!-- TODO Add Nodes -->
 
 	<children>
-		<Group id="Group" layoutX="54.0" layoutY="260.0">
+		<Group id="Group" layoutX="54.0" layoutY="260.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="229.0" AnchorPane.topAnchor="300.0">
 			<children>
 				<Label layoutX="20.0" layoutY="30.0" text="Usuario:">
 					<font>
 						<Font size="13.0" fx:id="x1" />
 					</font>
 				</Label>
-				<Label font="$x1" layoutX="20.0" layoutY="68.0" text="Contraseña:" />
+				<Label font="$x1" layoutX="20.0" layoutY="68.0" prefHeight="15.0" prefWidth="97.0" text="Contraseña:" />
 				<Label font="$x1" layoutX="20.0" layoutY="105.0" text="Host:" />
 			</children>
 		</Group>
-		<Group id="Group" layoutX="152.0" layoutY="260.0">
+		<Group id="Group" layoutX="152.0" layoutY="260.0" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="151.00010681152344" AnchorPane.rightAnchor="74.99989318847656" AnchorPane.topAnchor="300.0">
 			<children>
 				<TextField id="txtUname" fx:id="txtUsername" layoutY="27.0" prefWidth="173.0" styleClass="text-field-login" stylesheets="@/css/style.css" />
-				<PasswordField id="yxyPassword" fx:id="txtPassword" layoutY="63.0" prefWidth="173.00009999999747" styleClass="text-field-login" stylesheets="@/css/style.css" />
+				<PasswordField id="yxyPassword" fx:id="txtPassword" layoutY="63.0" prefHeight="25.0" prefWidth="174.0" styleClass="text-field-login" stylesheets="@/css/style.css" />
 				<TextField fx:id="txtHost" layoutY="100.0" prefWidth="173.0" styleClass="text-field-login" stylesheets="@/css/style.css" />
 			</children>
 		</Group>
@@ -47,7 +53,7 @@
 				<Cursor fx:constant="HAND" />
 			</cursor>
 		</Button>
-		<ImageView fitHeight="271.0" fitWidth="276.0" layoutX="64.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+		<ImageView fitHeight="271.0" fitWidth="276.0" layoutX="64.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="208.0">
 			<image>
 				<Image url="@/img/logo.png" />
 			</image>
