--- a/resources/view/MainNew.fxml
+++ b/resources/view/MainNew.fxml
@@ -102,7 +102,7 @@
                     </rowConstraints>
                      <children>
                         <Label fx:id="lblCountParticipants" prefHeight="15.0" prefWidth="120.0" styleClass="label-lists" stylesheets="@../css/style.css" text="Participantes: " />
-                        <TextField fx:id="tfdParticipants" styleClass="text-field-main" stylesheets="@../css/style.css" text="Filtro..." GridPane.rowIndex="1" />
+                        <TextField fx:id="tfdParticipants" promptText="Filtro participantes" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.rowIndex="1" />
                         <GridPane GridPane.rowIndex="2">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -143,7 +143,7 @@
                   <GridPane>
                      <children>
                         <Label prefHeight="15.0" prefWidth="120.0" styleClass="label-lists" stylesheets="@../css/style.css" text="Eventos" />
-                        <TextField fx:id="tfdEvents" styleClass="text-field-main" stylesheets="@../css/style.css" text="Filtro..." GridPane.rowIndex="1" />
+                        <TextField fx:id="tfdEvents" promptText="Filtro evento" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.rowIndex="1" />
                      </children>
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -216,7 +216,70 @@
                      <content>
                         <AnchorPane>
                            <children>
-                              <WebView fx:id="tableLogs" prefHeight="484.0" prefWidth="614.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <WebView fx:id="tableLogs" prefHeight="484.0" prefWidth="614.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
+                              <GridPane layoutX="-1.0" prefHeight="30.0" prefWidth="629.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TextField fx:id="tfdParticipants1" promptText="Fecha" styleClass="text-field-main" stylesheets="@../css/style.css">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants11" promptText="Nombre completo del usuario" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="1">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants12" promptText="Usuario afectado" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="2">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants121" promptText="Contexto del evento" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="3">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants122" promptText="Componente" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="4">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants123" promptText="Nombre evento" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="5">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants111" layoutX="99.0" layoutY="17.0" promptText="Descripción" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="6">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants1111" promptText="Origen" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="7">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                    <TextField fx:id="tfdParticipants1112" promptText="Dirección IP" styleClass="text-field-main" stylesheets="@../css/style.css" GridPane.columnIndex="8">
+                                       <padding>
+                                          <Insets left="4.0" right="4.0" />
+                                       </padding>
+                                    </TextField>
+                                 </children>
+                              </GridPane>
                            </children>
                         </AnchorPane>
                      </content>
