--- a/resources/view/MainNew.fxml
+++ b/resources/view/MainNew.fxml
@@ -8,7 +8,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="613.0" prefWidth="879.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="571.0" prefWidth="1045.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <top>
       <GridPane prefHeight="46.0" prefWidth="879.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -176,20 +176,20 @@
    <bottom>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="214.0" minWidth="10.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="493.0" minWidth="0.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="505.0" minWidth="10.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Button fx:id="btnExport" mnemonicParsing="false" onAction="#saveChart" style="-fx-font-size: 13;" stylesheets="@../css/style.css" text="Exportar gráfico" GridPane.columnIndex="1" />
             <Button fx:id="btncarga" layoutX="160.0" layoutY="13.0" mnemonicParsing="false" onAction="#cargaDocumento" style="-fx-font-size: 13;" stylesheets="@../css/style.css" text="Cargar documento Local" GridPane.columnIndex="3" />
             <Button fx:id="btnExit" layoutX="310.0" layoutY="13.0" mnemonicParsing="false" onAction="#closeApplication" style="-fx-font-size: 13;" stylesheets="@../css/style.css" text="Salir" GridPane.columnIndex="4" />
-            <Button fx:id="btnchart" layoutX="303.0" layoutY="13.0" mnemonicParsing="false" onAction="#generateChart" style="-fx-font-size: 13;" stylesheets="@../css/style.css" text="Generar grafica a partir de filtros de tabla" />
+            <Button fx:id="btnchart" layoutX="303.0" layoutY="13.0" mnemonicParsing="false" onAction="#generateChart" style="-fx-font-size: 13;" stylesheets="@../css/style.css" text="Generar grafica a partir de filtros de tabla" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Button fx:id="btncarga1" mnemonicParsing="false" onAction="#cargaDocumentoOnline" style="-fx-font-size: 13;" stylesheets="@../css/style.css" text="Cargar documento online" GridPane.columnIndex="2" />
          </children>
       </GridPane>
